# sovereign-nexus-orchestrator

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
arsip/: EVALUATION.md
playbooks/: deep_research.yaml
src/: cli.py  config.py  main.py
src/core/: dispatcher.py  engine.py  planner.py  retry.py
src/mcp/: __init__.py  bridge.py  registry.py  server.py  tools.py
src/memory/: __init__.py  nexus.py
src/monitoring/: metrics.py
src/security/: auth.py
src/ui/: app.py
src/utils/: logger.py
